--- a/www/static/css/bootstrap.css
+++ b/www/static/css/bootstrap.css
@@ -7312,6 +7312,8 @@ blockquote {
 
 #body #sidebar,
 #body #topbar {
+  position: relative;
+  z-index: 2;
   padding: 0;
   background: rgba(17, 17, 17, 0.9);
 }
